--- a/style.css
+++ b/style.css
@@ -908,16 +908,25 @@ footer h2 {
         top:242px;
     }
 
+    #videoJuego {
+        top:240px;
+        height: 415px;
+    }
 
     .item6 h1 {
         font-size: 38px;
     }
 
+    .item6 img {
+        width: 400px;
+        height: 300px;
+    }
+
     #videoDemo {
-        height: 215px;
-        width: 495px;
-        top:195px;
-        margin-left: 17px;
+        height: 200px;
+        width: 374px;
+        top:190px;
+        margin-left: 14px;
 
     }
 
@@ -927,7 +936,7 @@ footer h2 {
         padding: 0px;
         padding-top: 70px;
         margin: auto;
-        max-width: 70%;
+        max-width: 90%;
         
 
     }
@@ -963,9 +972,21 @@ footer h2 {
         width: 240px;
     }
 
+}
+
+@media only screen and (max-width: 853px) {
+}
+
+@media only screen and (max-width: 827px) {
+    
     #videoDemo {
-        top:235px;
+        height: 200px;
+        width: 374px;
+        top:233px;
+        margin-left: 14px;
+
     }
+
 }
 
 @media only screen and (max-width: 800px) {
