--- a/style.css
+++ b/style.css
@@ -4,12 +4,6 @@
 ::selection {
     background-color: #1986a160;
 }
-
-body {
-
-
-}
-
 *,*::before,*::after {
     padding: 0;
     margin: 0;
@@ -19,71 +13,18 @@ body {
 
 }
 
-
-
-video {
-    object-fit:fill;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0;
-
-}
-.video-wrapper {
-    position: absolute;
-    overflow: hidden;
-    z-index: -1;
-    top:0px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    min-width: 100%; 
-    min-height: 100%; 
-  
-    width: auto;
-    height: auto;
-  }
-
-
-#logo {
-    width:64px;
-    height:64px;
-    border-radius:20px;
-    transition: 0.4s;
-
-}
-
-#logo.sticky {
-    width:48px;
-    height:48px;
-}
-
 header {
     position: sticky;
     top: 0;
     z-index: 19;
     width: 100%;
-    padding: 20px 7.5%;
-    margin: 0 auto;
-    transition: 0.4s;
-    background-color: #EEF0F5;
+
 }
 
 header.sticky {
-    background: #111111;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: rgba(255, 255, 255, 0.096);
+    background: #1d1d1fc4;
+    border-bottom: 1px solid #3296d83f;
     color:white;
-    padding: 10px 7.5%;
-}
-
-#listaMenu {
-    list-style:none;
-    display: inline-block;
 }
 
 body {
@@ -92,6 +33,11 @@ body {
 }
 
 
+#headerCentral {
+    padding: 20px 7.5%;
+    margin: 0 auto;
+
+}
 
 #layoutTop {
     display: flex;
@@ -106,74 +52,12 @@ body {
 }
 
 #layoutCentral {
-    flex: 0 1 700px;
+    flex: 0 1 406px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 16px;
 
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0 0 0 0px;
-}
-
-li {
-    float: left;
-    color: black;
-
-}
-
-li.sticky a{
-    color:white;
-}
-
-li a {
-    position: relative;
-    z-index: 102;
-    display: inline-block;
-    padding: 8px 18px;
-    font-size: 20px;
-    font-weight: 500;
-    letter-spacing: -.011em;
-    text-decoration: none;
-    color:black;
-}
-
-li a:hover {
-    -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
-    -webkit-mask-size: 200%;
-    animation: shine 2s infinite;
-}
-
-#a.sticky {
-    color:#d5d5d6;
-}
-
-#b.sticky {
-    color:#d5d5d6;
-}
-
-#x.sticky {
-    color:#d5d5d6;
-}
-
-#d.sticky {
-    color:#d5d5d6;
-}
-
-
-  
-@-webkit-keyframes shine {
-    from {
-      -webkit-mask-position: 150%;
-    }
-    
-    to {
-      -webkit-mask-position: -50%;
-    }
 }
 
 #layoutDcha {
@@ -211,12 +95,11 @@ li a:hover {
 }
 
 .seccion {
-    position:absolute;
+    position:relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    top:0;
-
+    padding-bottom:150px;
 }
 
 .seccion div {
@@ -239,23 +122,8 @@ li a:hover {
     margin-top: 50px;
 }
 
-
 #primeraSeccion {
-    top:0px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center; 
-    position:relative;
-    display: block;
-    justify-content: space-around;
-    align-items: center;
-    padding-bottom:390px;
-}
-
-#primeraSeccion div {
-    display: block;
-    flex-direction: column;
-    margin-top: 0px;
+    top:50px;
 }
 
 
@@ -274,10 +142,6 @@ li a:hover {
     background: #1985A1;
     background: linear-gradient(to right, #1985A1 6%, #CB59CF 97%);
     border: none;
-    margin: auto;
-    margin-top: 35px;
-
-
 
 }
 
@@ -292,53 +156,24 @@ li a:hover {
 
 #imagenPresentacion img {
     border-radius: 50%;
-
-        height: 320px;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-        margin-bottom: 70px;
-    
 }
 
 #presentacionNombre {
-    /*padding-left: 50px;*/
-    /*align-items:flex-start;*/
-    max-width: 60%;
-    text-align: center;
-    margin: auto;
-
+    border-left: 1px solid black;
+    padding-left: 50px;
+    align-items:flex-start;
+    max-width: 40%;
 
 }
 
 #presentacionNombre h1{
-    font-size: 82px;
-    line-height: 1.1;
-    letter-spacing: -.045em;
-    margin-top: 60px;
-    margin-bottom: 20px;  
-    color:white; 
-    background: #1985A1;
-    background: linear-gradient(to right, #1985A1 6%, #CB59CF 97%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-
-
-#presentacionNombre h4 {
-    color: #161616;
-    opacity: .75;
-    font-size: 28px;
-    line-height: 1.2;
-    letter-spacing: -.04em;
-    margin: auto;
+    font-size: 3.5em;
+    font-weight: 600;
 }
 
 #presentacionNombre p {
     font-size: 1.2em;
-
-    /*max-width: 90%;*/
+    max-width: 90%;
 }
 
 
@@ -347,9 +182,8 @@ li a:hover {
     border-radius: 20px;
 }
 
-
 .separadores {
-    height: 200px;
+    height: 150px;
     overflow: hidden;
     position:relative;
     top:0px;
@@ -540,31 +374,7 @@ li a:hover {
     position:absolute;
     border-radius: 10px;
     top:40px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center; 
-}
-
-.web {
-    background-image: url("./demoWeb.gif");
-
-}
-
-.juego {
-    background-image: url("./demoJuego.gif");
-
-}
-
-
-
-#videoJuego {
-    height: 320px;
-    width: 658px;
-    margin-left: 20px;
-    position:absolute;
-    border-radius: 10px;
-    top:40px;
-    background-image: url("./demoJuego.gif");
+    background-image: url(https://media.csesoc.org.au/content/images/2019/10/learn11.gif);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
@@ -638,18 +448,26 @@ li a:hover {
     background: linear-gradient(90deg, rgba(25,133,161,1) 21%, rgba(203,89,207,1) 77%);
 }
 
-
-
-#manoMovil {
-    width: 600px;
-    height: 600px;
-    position: relative;
-    top:-40px;
+#videoJuego {
+    height: 413px;
+    width: 245px;
+    margin-left: 133px;
     transform: skew(-18deg);
+    z-index: 400;
+    position:absolute;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 33px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    top:35px;
+    background-image: url(https://c.tenor.com/1wZ88hrB5SwAAAAd/subway-surfer.gif);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
 }
 
 #segundaSeccion {
-    background-color: #0c0c0c;
+    background-color: #101014;
     position:relative;
 
 }
@@ -697,78 +515,47 @@ li a:hover {
 }
 
 #java {
-    width: 0%;
-    min-width: 0%;
+    width: 95%;
+    min-width: 95%;
     background: linear-gradient(269deg, #d37dec, #7decd4);
     background-size: 400% 400%;
-    transition: .6s;
+
     -webkit-animation: animacionGradientHabs 10s ease infinite;
     -moz-animation: animacionGradientHabs 10s ease infinite;
     animation: animacionGradientHabs 10s ease infinite;
-}
-
-#java.activo {
-    width: 95%;
-    min-width: 95%;
-}
-
-@keyframes prueba {
-    from {
-        width: 0%;
-        min-width: 0%;
-    }
-    to {
-        width: 95%;
-        min-width: 95%;
-    }
 }
 
 #cssHTML {
-    width: 0%;
-    min-width: 0%;
+    width: 81%;
+    min-width: 81%;
     background: linear-gradient(269deg, #5e53f0, #8cec7d);
     background-size: 400% 400%;
-    transition: .6s;
+
     -webkit-animation: animacionGradientHabs 10s ease infinite;
     -moz-animation: animacionGradientHabs 10s ease infinite;
     animation: animacionGradientHabs 10s ease infinite;
-}
-
-#cssHTML.activo  {
-    width: 81%;
-    min-width: 81%;
 }
 
 #sql {
-    width: 0%;
-    min-width: 0%;
+    width: 90%;
+    min-width: 90%;
     background: linear-gradient(269deg, #aba8dd, #be48ec);
     background-size: 400% 400%;
-    transition: .6s;
+
     -webkit-animation: animacionGradientHabs 10s ease infinite;
     -moz-animation: animacionGradientHabs 10s ease infinite;
     animation: animacionGradientHabs 10s ease infinite;
-}
-
-#sql.activo  {
-    width: 90%;
-    min-width: 90%;
 }
 
 #c {
-    width: 0%;
-    min-width: 0%;
+    width: 55%;
+    min-width: 55%;
     background: linear-gradient(269deg, #e23fc7, #e3ee4d);
     background-size: 400% 400%;
-    transition: .6s;
+
     -webkit-animation: animacionGradientHabs 10s ease infinite;
     -moz-animation: animacionGradientHabs 10s ease infinite;
     animation: animacionGradientHabs 10s ease infinite;
-}
-
-#c.activo  {
-    width: 55%;
-    min-width: 55%;
 }
 
 @-webkit-keyframes animacionGradientHabs {
@@ -787,37 +574,8 @@ li a:hover {
     100%{background-position:0% 50%}
 }
 
-
-#separadorFrase {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center; 
-    background-image: linear-gradient(186deg, rgba(0, 0, 0, 0.74) 12%, rgba(0, 0, 0, 0.74) 88%),url("https://www.wallpapertip.com/wmimgs/136-1369543_laptop-coding.jpg");
-    padding: 150px;
-    
-}
-
-#separadorFrase h1{
-    font-size: 62px;
-    line-height: 1.1;
-    letter-spacing: -.045em;
-    margin-top: 60px;
-    margin-bottom: 20px;  
-    text-align: center;
-    min-width: 90%;
-    color:white; 
-    background: #1985A1;
-    background: linear-gradient(to right, #1985A1 6%, #CB59CF 97%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-
-
 #terceraSeccion {
-    background-color: #111316;
-    /*background-color: #F0F0F0;*/
+    background-color: #171218;
 }
 
 #cuartaSeccion {
@@ -843,22 +601,17 @@ li a:hover {
 .contenedorEstudios {
     margin:auto;
     width:70%;
+    border: 1px solid hsla(0,0%,51.4%,.16);
     border-radius: 20px;
 
 }
 
 .contenedorEstudios h3 {
     color:white;
-    line-height: 1.6;
-    letter-spacing: -.04em;
 }
 
 .contenedorEstudios h4 {
-    color: #f5f5f7;
-    opacity: .75;
-    font-size: 28px;
-    line-height: 1.2;
-    letter-spacing: -.04em;
+    color:white;
     font-style: italic;
     font-size:medium;
     margin-top: 10px;
@@ -881,15 +634,11 @@ li a:hover {
 
 }
 
-
-
 .imagenEstudio {
     width:90px;
     height:90px;
     border-radius:50%;
-    border:1px solid rgba(255, 255, 255, 0.219);
-    background-color:#000000c2;
-    border:1px solid rgba(255, 255, 255, 0.438);
+    background-color:red;
     margin:auto;
     margin-top: 20px;
     margin-bottom: 20px;   
@@ -904,54 +653,14 @@ li a:hover {
     transform: translateY(-50%);
 }
 
-.estudiosFondo {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center; 
-}
-
-.infoEstudios {
-    background-color:#000000c2;
-    border:1px solid rgba(255, 255, 255, 0.219);
-
-    width: 100%;
-    border-radius: 20px;
-    top:2.5px;
-    margin: auto;
-    position:relative;
-
+#estudiosOficialesColor {
+    background: rgb(203,89,207);
+    background: linear-gradient(90deg, rgba(203,89,207,1) 21%, rgba(25,133,161,1) 77%);
 }
 
 #estudiosCursosColor {
     background: rgba(25,133,161,1);
     background: linear-gradient(90deg, rgba(25,133,161,1) 21%, rgb(203,89,207) 77%);
-    
-}
-
-#estudio1 {
-    background-image: url("https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Y29tcHV0ZXIlMjBoYXJkd2FyZXxlbnwwfHwwfHw%3D&w=1000&q=80");
-
-}
-
-#estudio2 {
-    background-image: url("https://blog.juandesouza.com/wp-content/uploads/2020/07/juandesouza_frameworks-de-desenvolvedores.jpg");
-}
-
-#estudio3 {
-    background-image: url("https://images7.alphacoders.com/122/1228014.png");
-}
-
-#estudio4 {
-    background-image: url("./sqlCode.png");
-}
-
-#estudio5 {
-    background-image: url("https://img2.goodfon.com/wallpaper/nbig/2/cb/bukvy-angliyskiy-haos.jpg");
-}
-
-#estudio6 {
-    background-image: url("https://www.tanikal.com/wp-content/uploads/2017/11/code-html-css-editor-boskampi.jpg");
 }
 
 footer {
@@ -966,9 +675,10 @@ footer h2 {
     letter-spacing: -.025em;
 }
 
-
-
 @media only screen and (max-width: 1267px) {
+    #presentacionNombre h1{
+        font-size: 3em;
+    }
 
     #videoDemo {
         height: 310px;
@@ -988,14 +698,6 @@ footer h2 {
         font-size: 27px;
     
     }
-
-    video {
-        height: 70%;
-        width: 100%;
-    
-    }
-
-
     
 }
 
@@ -1142,10 +844,6 @@ footer h2 {
 
     }
 
-    #listaMenu {
-        display: none;
-    }
-
     
 
 }
@@ -1200,17 +898,6 @@ footer h2 {
     .spanItemNumero {
         font-size: 40px;
     }
-
-    .gridEstudios {
-        display: block;
-
-    }
-    
-    .gridEstudios  > div {
-        margin-top: 30px;
-
-    
-    }
 }
 
 
@@ -1223,15 +910,17 @@ footer h2 {
         max-width: 55%;
     }
 
-
-
-    .item6 h1 {
-        font-size: 38px;
+    #videoJuego {
+        top:242px;
     }
 
     #videoJuego {
         top:240px;
         height: 415px;
+    }
+
+    .item6 h1 {
+        font-size: 38px;
     }
 
     .item6 img {
@@ -1362,7 +1051,7 @@ footer h2 {
         margin-bottom: 70px;
     }
 
-    .botacto{
+    .botonContacto{
         font-size: 27px;
         height: 66px;
 
@@ -1378,42 +1067,10 @@ footer h2 {
 @media only screen and (max-width: 700px) {
 
     #fraseSuperiorSeccion {
-        font-size: 42px;
+        font-size: 43px;
 
     }
 
-
-    .item6 img {
-        width: 400px;
-        height: 300px;
-    }
-
-    #videoDemo {
-        height: 200px;
-        width: 374px;
-        top:230px;
-        margin-left: 14px;
-
-    }
-
-    #manoMovil {
-        width: 500px;
-        height: 500px;
-        position: relative;
-        top:-40px;
-        transform: skew(-18deg);
-    }
-
-    #videoJuego {
-        height: 347px;
-        width: 206px;
-        top:268px;
-        margin-left: 110px;
-
-    }
-
-
-    /*
     #videoDemo {
         display: none;
     }
@@ -1423,56 +1080,10 @@ footer h2 {
     }
     .item6 img{
         display: none;
-    }*/
+    }
 
 
 }
-
-@media only screen and (max-width: 650px) {
-
-    #videoDemo {
-        top:252px;
-
-    }
-
-    #videoJuego {
-        top:292px;
-
-
-    }
-
-    #separadorFrase h1{
-        font-size: 32px;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .item6 img {
-        width: 300px;
-        height: 200px;
-    }
-
-    #videoDemo {
-        height: 130px;
-        width: 282px;
-        top:247px;
-        margin-left: 8px;
-
-    }
-
-    #manoMovil {
-        display: none;
-
-    }
-
-    #videoJuego {
-        display: none;
-
-    }
-
-    
-}
-
 
 
 
